third_party/move/move-compiler/tests/move_check/parser/struct_without_fields.exp
error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/struct_without_fields.move:3:13
  │
3 │     struct S;
  │             ^ Move 2 language construct is not enabled: struct declaration without field list

